# scheme-interpreter

./: .gitignore  README.md  package.yaml  scheme-interpreter.cabal
.github/workflows/: haskell.yml  runtests
app/: Main.hs
src/: Cli.hs  Evaluator.hs  Parser.hs  Types.hs  Util.hs
test/: InterpreterTest.hs  test.py
test/data/: test1
