cabal-version:      2.4
name:               scheme-interpreter
version:            0.1.0.0
maintainer:         glinskikh.roman@yandex.ru
author:             Roman Glinskikh
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Cli

    hs-source-dirs:   src
    other-modules:    Paths_scheme_interpreter
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        text,
        cmdargs

executable scheme-interpreter-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_scheme_interpreter
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        scheme-interpreter,
        text

test-suite scheme-interpreter-test
    type:             exitcode-stdio-1.0
    main-is:          InterpreterTest.hs
    hs-source-dirs:   test
    other-modules:    Paths_scheme_interpreter
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        QuickCheck,
        HUnit,
        base >=4.7 && <5,
        scheme-interpreter
